<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
	<string name="app_name">ACE Member</string>
	<string name="login_title">ACE Member</string>
	<string name="version">Version</string>
	<string name="version_name"><xliff:g>%s</xliff:g> [<xliff:g>%s</xliff:g>]</string>
	<string name="login">Login</string>
	<string name="account">Account</string>
	<string name="password">Password</string>
	<string name="date">Date</string>
	<string name="back">Back</string>
	<string name="reset_password">Reset Password</string>
	<string name="new_password">New Password</string>
	<string name="trading_password_required">Trading Password Required</string>
	<string name="new_password_required">New Password Required</string>
	<string name="confirm_password">Confirm Password</string>
	<string name="confirm_password_required">Confirm Password Required</string>
	<string name="invalid_confirm_password">Invalid Confirm Password</string>
	<string name="your_password">Your Password</string>
	<string name="your_trading_password">Your Trading Password</string>
	<string name="new_trading_password">New Trading Password</string>
	<string name="confirm_trading_password">Confirm Trading Password</string>
	<string name="title_note">Note:</string>
	<string name="reset_password_rules">\n
		1. New password can not be as same as the old one;\n
		2. New password should be composed by 1 letter and 1 digit at least, and should not less than 8 bits.\n
		3. New password can not be too simple, such as aaaa1111.\n
	</string>
	<string name="trading_pwd_rules">\n
		1. Trading password is composed by 6 digits;\n
	</string>
	<string name="transfer_rules">
Note:\n
	1. System will charge 0.012% of the transfer amount as transfer fee (minimal fee: 0.25 USD);\n
	</string>
	<string name="password_rules">\n
		1. Password should be composed by 1 letter and 1 digit at least, and should not less than 8 bits.\n
		2. Password can not be too simple, such as aaaa1111.\n
	</string>
	<string name="pwd_too_simple">Password too Simple</string>
	<string name="enter_pattern_password">Enter Gesture Password</string>
	<string name="enter_new_pattern_password">Enter New Gesture Password</string>
	<string name="confirm_pattern_password">Confirm Gesture Password</string>
	<string name="try_again">Try Again</string>
	<string name="gesture_lock_forbidden">Password locked, try again after 30 seconds</string>
	<string name="gesture_lock_forbidden_time_left">Try Again after <xliff:g>%d</xliff:g> Second(s)</string>
	<string name="gesture_invalid_pattern">Invalid, <xliff:g>%d</xliff:g> Chance(s) Left</string>
	<string name="gesture_pattern_not_long_enough">Gesture length not enough, please try again</string>
	<string name="gesture_password_inactive">Gesture Password Inactive</string>
	<string name="lockpattern_recording_incorrect_too_short">At least 4 points, please try again</string>
	<string name="lockpattern_error">Invalid gesture</string>
	<string name="lockscreen_access_pattern_start">Gesture Started</string>
	<string name="lockscreen_access_pattern_cleared">Gesture Cleared</string>
	<string name="lockscreen_access_pattern_cell_added">Cell Added</string>
	<string name="lockscreen_access_pattern_detected">Gesture Completed</string>
	<string name="ask_forgot_gesture_password">Forgot Gesture Password?</string>
	<string name="install_google_services">Please Install Google Play Services</string>
	<string name="phone_required">Phone Required</string>
	<string name="password_required">Password Required</string>
	<string name="register">Register</string>
	<string name="forgot_password">Forgot Password</string>
	<string name="ask_forgot_password">Forgot Password?</string>
	<string name="member_system">Member System</string>
	<string name="login_password">Login Password</string>
	<string name="about">About</string>
	<string name="gesture_password">Gesture Password</string>
	<string name="confirm_to_set_gesture_password">Set Gesture Password?</string>
	<string name="settings_reset_gesture_password">Reset Gesture Password</string>
	<string name="set_gesture_password">Set Gesture Password</string>
	<string name="settings_fingerprint_login">Fingerprint Login</string>
	<string name="settings_fingerprint_pay">Fingerprint Pay</string>
	<string name="logout">Logout</string>
	<string name="forgot_gesture_password">Forgot Gesture Password</string>
	<string name="invalid_trading_password">Invalid Trading Password</string>
	<string name="about_us">Asia Wei Luy is a mobile payment service provider that allows our customers (individuals and businesses) to transfer, deposit and withdraw money between each other and with anyone in Cambodia, via any mobile phone, at low cost. Moreover, as the leading mobile payment provider, Asia Wei Luy allows customers to make payment like bill payment, phone top up and loan services whenever and wherever.</string>
	<string name="head_office">Head Office</string>
	<string name="head_office1">Head Office:</string>
	<string name="head_office_address">#45&#8211;47, Street Koh Pich, Sangkat Tole Bassac, Khan Chamkarmon, Phnom Penh</string>
	<string name="copyright">Copyright © 2017 Asia Wei Luy Co., Ltd. All rights reserved.</string>
	<string name="system_language">System Language</string>
	<string name="office_website">Website:</string>
	<string name="waiting_for_verifying">Waiting for Verifying Your Certificate.</string>
	<string name="to_verify_certificate">To Verify Certificate</string>
	<string name="statement">Statement</string>
	<string name="transaction">Transaction</string>
	<string name="log">Log</string>
	<string name="payment_history">Payment History</string>
	<string name="service_point">Service Point</string>
	<string name="suspended">Suspended</string>
	<string name="inactive">Inactive</string>
	<string name="active">Active</string>
	<string name="double_click_to_exit_the_program">Press back key again will exit the program</string>
	<string name="home">Home</string>
	<string name="friends">Friends</string>
	<string name="service">Service</string>
	<string name="me">Me</string>
	<string name="scan">Scan</string>
	<string name="money">Money</string>
	<string name="transfer">Transfer</string>
	<string name="transfer_out">Transfer Out</string>
	<string name="transfer_out_a2c">Transfer Out (A2C)</string>
	<string name="transfer_in">Transfer In</string>
	<string name="transfer_history">Transfer History</string>
	<string name="top_up">Top Up</string>
	<string name="top_up_show_pin_code">Top Up (Show Pin-code)</string>
	<string name="top_up_send_sms">Top Up (Send SMS)</string>
	<string name="exchange">Exchange </string>
	<string name="exchange_success">Exchange Success</string>
	<string name="a2c_receive">A2C Receive</string>
	<string name="history">History</string>
	<string name="balance">Balance</string>
	<string name="currency">Currency</string>
	<string name="deposit">Deposit</string>
	<string name="withdraw">Withdraw</string>
	<string name="withdraw_cancelled">Withdraw Cancelled</string>
	<string name="withdraw_detail">Withdraw Detail</string>
	<string name="record">Record</string>
	<string name="sure_logout">Are You Sure to Logout?</string>
	<string name="language">Language</string>
	<string name="id_certificate">ID Certificate</string>
	<string name="to_member">To Member</string>
	<string name="to_non_member">To Non-Member</string>
	<string name="to_merchant">To Merchant</string>
	<string name="to_partner">To Partner</string>
	<string name="to_set_trading">Please Set Trading Password</string>
	<string name="source_phone">Source Phone</string>
	<string name="target_phone">Target Phone</string>
	<string name="input_amount">Input Amount</string>
	<string name="input_remark">Input Remark</string>
	<string name="fee">Fee</string>
	<string name="delete_bank">Delete Bank Account</string>
	<string name="msg_gesture_dlg_tip">Will Close Fingerprint Login</string>
	<string name="member">Member</string>
	<string name="non_member">Non Member</string>
	<string name="add_contact">Add Contacts</string>
	<string name="new_friends">New Friends</string>
	<string name="accepted">Accepted</string>
	<string name="accept">Accept</string>
	<string name="rejected">Rejected</string>
	<string name="contact_information">Contact Information</string>
	<string name="add">Add</string>
	<string name="chat">Chat</string>
	<string name="chat_info">Chat Info</string>
	<string name="send">Send</string>
	<string name="photo">Photo</string>
	<string name="photograph">Photograph</string>
	<string name="contact_list">Contact List</string>
	<string name="send_message">Send Message</string>
	<string name="group_chat">Group Chat</string>
	<string name="create_chat_group">Create Chat Group</string>
	<string name="select_contacts">Please Select Contacts</string>
	<string name="hold_to_talk">Hold to Talk</string>
	<string name="release_end">Release End</string>
	<string name="slide_up_cancel_send">Slide Up to Cancel Send</string>
	<string name="release_cancel_send">Release to Cancel Send</string>
	<string name="record_require_permissions">Voice Recording Requires Permissions</string>
	<string name="attention_non_friend">Attention, not Friend!</string>
	<string name="send_temp_msg">Temp Message</string>
	<string name="no_contacts_found">No Contacts Found</string>
	<string name="system_message">System Message</string>
	<string name="payment_message">Payment Message</string>
	<string name="trading_message">Trading Message</string>
	<string name="official_account">Official Account</string>
	<string name="my_qr_code">My QR Code</string>
	<string name="scan_qr_code">Scan QR Code</string>
	<string name="scan_to_add_friend">Scan to Add Friend</string>
	<string name="scan_qr_to_add_friends">Scan QR to Add Friends</string>
	<string name="friend_requests">Friend Requests</string>
	<string name="people_you_may_know">People You May Know</string>
	<string name="added">Added</string>
	<string name="no_more_results">No more results</string>
	<string name="contacts">Contacts</string>
	<string name="read_contacts_require_permissions">Read Mobile Phone Contacts Requires Permissions</string>
	<string name="profile">Profile</string>
	<string name="ignore">Ignore</string>
	<string name="real_name">Real Name</string>
	<string name="area">Area</string>
	<string name="be_rejected">Be rejected</string>
	<string name="Yesterday">Yesterday</string>
	<string name="scan_qr_code_add_me_as_a_friend">Scan the QR Code to add me as a friend</string>
	<string name="add_type">Add Type</string>
	<string name="scan_my_qr_code">Scan My QR Code</string>
	<string name="search_via_phone">Search via Phone</string>
	<string name="search_my_phone">Search My Phone</string>
	<string name="note_information">Note information</string>
	<string name="request_sent">Request Sent</string>
	<string name="agent">Agent</string>
	<string name="type">Type</string>
	<string name="amount">Amount</string>
	<string name="status">Status</string>
	<string name="electricity">Electricity</string>
	<string name="bank">Bank</string>
	<string name="phone">Phone</string>
	<string name="remark">Remark</string>
	<string name="withdraw_fee">Withdraw Fee</string>
	<string name="target">Target</string>
	<string name="phone_number">Phone Number</string>
	<string name="time">Time</string>
	<string name="receive_money_success">Receive Money Success</string>
	<string name="transfer_fee">Transfer Fee</string>
	<string name="done">Done</string>
	<string name="accept_code">Accept Code</string>
	<string name="top_up_way">Top Up Way</string>
	<string name="face_value">Face Value</string>
	<string name="sn">SN</string>
	<string name="pincode">Pin-code</string>
	<string name="name">Name</string>
	<string name="completed">Completed</string>
	<string name="sender">Sender</string>
	<string name="receiver">Receiver</string>
	<string name="withdraw_via_agent">Withdraw (via Agent)</string>
	<string name="edc_type_1_phnom_penh_kandal">Phnom Penh &amp; Kandal</string>
	<string name="consumer1">Consumer#</string>
</resources>