<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include layout="@layout/view_toolbar"/>

	<com.og.utils.SlidingLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ScrollView
			android:layout_width="match_parent"
			android:layout_height="match_parent">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="@color/white"
				android:orientation="vertical">

				<LinearLayout
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_marginTop="@dimen/margin20"
					android:gravity="center"
					android:orientation="horizontal">

					<android.support.v7.widget.AppCompatImageView
						android:id="@+id/iv_phone_company"
						android:layout_width="@dimen/width32"
						android:layout_height="@dimen/height32"/>

					<TextView
						android:id="@+id/tv_company_name"
						style="@style/tv_order_detail_title"
						tools:text="Trantor"/>

				</LinearLayout>

				<TextView
					android:id="@+id/tv_price"
					style="@style/tv_order_detail_total"
					tools:text="12 USD"/>

				<View
					style="@style/v_horizontal_divider_line2"/>

				<LinearLayout style="@style/ll_order_detail_content">

					<TextView
						style="@style/tv_order_detail_content_left"
						android:text="@string/face_value"/>

					<TextView
						android:id="@+id/tv_face_value"
						style="@style/tv_order_detail_content_right"/>
				</LinearLayout>

				<LinearLayout
					android:id="@+id/ll_phone_number"
					style="@style/ll_order_detail_content"
					android:visibility="gone">

					<TextView
						style="@style/tv_order_detail_content_left"
						android:text="@string/phone_number"/>

					<TextView
						android:id="@+id/tv_phone_number"
						style="@style/tv_order_detail_content_right"/>
				</LinearLayout>


				<LinearLayout style="@style/ll_order_detail_content">

					<TextView
						style="@style/tv_order_detail_content_left"
						android:text="@string/top_up_way"/>

					<TextView
						android:id="@+id/tv_top_up_way"
						style="@style/tv_order_detail_content_right"/>
				</LinearLayout>

				<LinearLayout style="@style/ll_order_detail_content">

					<TextView
						style="@style/tv_order_detail_content_left"
						android:text="@string/sn"/>

					<TextView
						android:id="@+id/tv_sn"
						style="@style/tv_order_detail_content_right"/>
				</LinearLayout>

				<LinearLayout style="@style/ll_order_detail_content">

					<TextView
						style="@style/tv_order_detail_content_left"
						android:text="@string/pincode"/>

					<TextView
						android:id="@+id/tv_pincode2"
						style="@style/tv_order_detail_content_right"/>
				</LinearLayout>


				<View style="@style/v_horizontal_divider_line2"/>

				<LinearLayout style="@style/ll_order_detail_content">

					<TextView
						style="@style/tv_order_detail_content_left"
						android:text="@string/time"/>

					<TextView
						android:id="@+id/tv_time"
						style="@style/tv_order_detail_content_right"
						tools:text="2017-01-01"/>
				</LinearLayout>

				<LinearLayout
					android:layout_marginBottom="@dimen/margin10"
					style="@style/ll_order_detail_content">

					<TextView
						style="@style/tv_order_detail_content_left"
						android:text="@string/status"/>

					<TextView
						android:id="@+id/tv_status"
						style="@style/tv_order_detail_content_right"
						android:text="@string/completed"/>
				</LinearLayout>

				<Button
					android:id="@+id/btn_confirm"
					style="@style/btn_submit"
					android:text="@string/done"
					android:visibility="gone"/>
			</LinearLayout>

		</ScrollView>

	</com.og.utils.SlidingLayout>


</LinearLayout>