<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
	xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:orientation="vertical">

	<include layout="@layout/view_toolbar"/>

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<LinearLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:background="@color/white"
			android:orientation="vertical">

			<LinearLayout
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:layout_marginTop="@dimen/margin20"
				android:gravity="center"
				android:orientation="horizontal">

				<android.support.v7.widget.AppCompatImageView
					android:id="@+id/iv_icon"
					android:layout_width="@dimen/width32"
					android:layout_height="@dimen/height32"
					app:srcCompat="@drawable/ic_withdraw_fee"/>

				<TextView
					android:id="@+id/tv_type_title"
					style="@style/tv_order_detail_title"
					android:text="@string/withdraw_fee"/>

			</LinearLayout>

			<com.ace.member.view.MoneyTextView
				android:id="@+id/tv_fee"
				style="@style/tv_order_detail_total"
				app:abs_amount="true"
				app:currency_at_end="true"
				app:show_currency="true"
				tools:text="10 USD"/>

			<View
				style="@style/v_horizontal_divider_line1"
				android:layout_marginTop="@dimen/margin20"/>

			<LinearLayout style="@style/ll_order_detail_content">

				<TextView
					style="@style/tv_order_detail_content_left"
					android:layout_weight="2"
					android:text="@string/transaction"/>

				<TextView
					android:id="@+id/tv_related_type"
					style="@style/tv_order_detail_content_right"
					tools:text="@string/withdraw_via_agent"/>
			</LinearLayout>

			<LinearLayout
				android:id="@+id/ll_bank"
				style="@style/ll_order_detail_content"
				android:visibility="gone">

				<TextView
					style="@style/tv_order_detail_content_left"
					android:layout_weight="2"
					android:text="@string/bank"/>

				<TextView
					android:id="@+id/tv_related_bank"
					style="@style/tv_order_detail_content_right"
					tools:text="@string/bank"/>
			</LinearLayout>

			<LinearLayout style="@style/ll_order_detail_content">

				<TextView
					style="@style/tv_order_detail_content_left"
					android:text="@string/currency"/>

				<TextView
					android:id="@+id/tv_currency"
					style="@style/tv_order_detail_content_right"/>
			</LinearLayout>

			<LinearLayout style="@style/ll_order_detail_content">

				<TextView
					style="@style/tv_order_detail_content_left"
					android:text="@string/amount"/>

				<com.ace.member.view.MoneyTextView
					android:id="@+id/tv_amount"
					style="@style/tv_order_detail_content_right"
					android:textColor="@color/clr_order_content"
					app:abs_amount="true"
					app:show_currency="false"
					tools:text=""/>
			</LinearLayout>

			<LinearLayout style="@style/ll_order_detail_content">

				<TextView
					style="@style/tv_order_detail_content_left"
					android:text="@string/fee"/>

				<com.ace.member.view.MoneyTextView
					android:id="@+id/tv_fee2"
					style="@style/tv_order_detail_content_right"
					android:textColor="@color/clr_order_content"
					app:abs_amount="true"
					app:show_currency="false"
					tools:text=""/>
			</LinearLayout>

			<RelativeLayout style="@style/ll_order_detail_content">

				<TextView
					android:id="@+id/tv_remark_title"
					style="@style/tv_order_detail_content_left"
					android:layout_width="wrap_content"
					android:layout_height="wrap_content"
					android:layout_marginEnd="@dimen/margin30"
					android:gravity="center_vertical"
					android:paddingTop="@dimen/padding10"
					android:text="@string/remark"/>

				<TextView
					android:id="@+id/tv_remark"
					android:layout_width="match_parent"
					android:layout_height="wrap_content"
					android:layout_toEndOf="@id/tv_remark_title"
					android:gravity="center_vertical|end"
					android:minHeight="@dimen/height40"
					android:paddingTop="@dimen/padding10"
					android:textColor="@color/clr_common_content"
					android:textSize="@dimen/txtSize16"
					tools:text="2017-01-1231 1231221345 35324  324234 5 34"/>
			</RelativeLayout>

			<View
				style="@style/v_horizontal_divider_line2"/>

			<LinearLayout style="@style/ll_order_detail_content">

				<TextView
					style="@style/tv_order_detail_content_left"
					android:text="@string/time"/>

				<TextView
					android:id="@+id/tv_time"
					style="@style/tv_order_detail_content_right"
					tools:text="2017-01-01"/>
			</LinearLayout>


			<LinearLayout style="@style/ll_order_detail_content">

				<TextView
					style="@style/tv_order_detail_content_left"
					android:text="@string/status"/>

				<TextView
					android:id="@+id/tv_status"
					style="@style/tv_order_detail_content_right"
					tools:text="@string/completed"/>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

</LinearLayout>